# snippets-rs

backend/: Cargo.toml
backend/snips-backend/: Cargo.toml
backend/snips-backend/src/: main.rs
backend/snips-backend/src/handlers/: snippets.rs
backend/snips-backend/src/models/: mod.rs  snippets.rs
backend/snips-lib/: Cargo.toml
backend/snips-lib/src/: lib.rs
